src/objects/AcctSeed__GL_Account_Reporting_Group_Line__c.object
<CustomObject>
    <description>Used to document the association a GL account has with a Gl account reporting group.</description>
    <fields>
        <fullName>AcctSeed__GL_Account_Reporting_Group__c</fullName>
        <label>GL Account Reporting Group</label>
        <referenceTo>AcctSeed__GL_Account_Reporting_Group__c</referenceTo>
        <relationshipLabel>GL Account Reporting Group Lines</relationshipLabel>
        <relationshipName>GL_Account_Reporting_Group_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>GL Account Reporting Group Lines</relationshipLabel>
        <relationshipName>GL_Account_Reporting_Group_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <formula>Text(AcctSeed__GL_Account__r.AcctSeed__Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>GL Account Reporting Group Line</label>
    <nameField>
        <displayFormat>GLRAG-{0000}</displayFormat>
        <label>GL Account Reporting Group Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Account Reporting Group Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>